# Projekt-SDIZO

projekt/: Bst.cpp  Bst.h  CMakeLists.txt  Kopiec.cpp  Kopiec.h  Lista.cpp  Lista.h  Rbt.cpp  Rbt.h  Tablica.cpp  Tablica.h  dane.txt  main_menu.h  menu.h  menuBST.h  menuKopiec.h  menuLista.h  menuRbt.h  menuTablica.h  projekt.cpp  projekt.h
x64-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
x64-release/projekt/: cmake_install.cmake  czasy_kopiec1.txt  czasy_kopiec2.txt  czasy_kopiec3.txt  czasy_kopiec4.txt  czasy_kopiec5.txt  czasy_lista1.txt  czasy_lista2.txt  czasy_lista3.txt  czasy_lista4.txt  czasy_lista5.txt
